[build-system]
requires = ["setuptools>=61", "extension-helpers>=1.1.1", "setuptools-scm[toml]>7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qpoint"
authors = [
    {name="Alexandra Rahlin", email="arahlin@users.noreply.github.com"},
]
description = "A lightweight quaternion-based library for efficient telescope pointing"
readme = "README.md"
requires-python = ">=3.8"
urls = {source = "https://github.com/arahlin/qpoint"}
license = "MIT"
dynamic = ["version"]
dependencies = ["numpy>1.10.0", "scipy", "astropy"]
